# snowtuner

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
deploy/: bootstrap.sh  fetch-secrets.sh  install-cloudflared.sh  snowtuner.cf.yaml  snowtuner.service
docs/: architecture.md  aws-deploy.md  configuration.md  recommenders.md  schema.md
scripts/: render_mermaid.py
src/snowflake_optimizer/: __init__.py  cli.py
src/snowflake_optimizer/actions/: __init__.py  alter_warehouse.py  base.py  create_warehouse.py  local_table.py  registry.py  routing_rule.py
src/snowflake_optimizer/features/: __init__.py  sqlglot_utils.py
src/snowflake_optimizer/ingestion/: __init__.py  base.py  snowflake_client.py  sync.py
src/snowflake_optimizer/ingestion/sources/: __init__.py  query_history.py  warehouse_events.py  warehouse_metering.py  warehouses.py
src/snowflake_optimizer/orchestrator/: __init__.py  runner.py
src/snowflake_optimizer/recommendations/: __init__.py  model.py  store.py
src/snowflake_optimizer/recommenders/: __init__.py  base.py  registry.py  training_state.py
src/snowflake_optimizer/recommenders/builtins/: auto_suspend_tuner.py
src/snowflake_optimizer/seed/: __init__.py  generate.py
src/snowflake_optimizer/storage/: __init__.py  db.py  schema.py
src/snowflake_optimizer/ui/: app.py
src/snowtuner/: __init__.py  cli.py  events.py  format.py
src/snowtuner/actions/: __init__.py  alter_warehouse.py  base.py  create_warehouse.py  local_table.py  registry.py  routing_rule.py
src/snowtuner/api/: __init__.py  app.py  auth.py  automation.py  schemas.py
src/snowtuner/autonomous/: __init__.py  applications.py  config.py  runner.py
src/snowtuner/credentials/: __init__.py  env_backend.py  file_backend.py  keypair.py  keyring_backend.py  model.py  resolver.py
src/snowtuner/demo/: __init__.py  runner.py  warehouses.py  workloads.py
src/snowtuner/experiments/: __init__.py  arm.py  axes.py  backfill.py  config_delta.py  cost_estimate.py  derive.py  eligibility.py  engine.py  model.py  provisioning.py  recipes.py  replay.py  sampling.py  stats.py  store.py  workload.py
src/snowtuner/features/: __init__.py  base.py  sqlglot_utils.py
src/snowtuner/ingestion/: __init__.py  base.py  drift.py  event_vocab.py  snowflake_client.py  sync.py
src/snowtuner/ingestion/sources/: __init__.py  query_history.py  warehouse_events.py  warehouse_metering.py  warehouses.py
src/snowtuner/mcp/: __init__.py  admin.py
src/snowtuner/orchestrator/: __init__.py  runner.py
src/snowtuner/query_groups/: __init__.py  model.py  sql.py  store.py
src/snowtuner/recommendations/: __init__.py  model.py  store.py
src/snowtuner/recommenders/: __init__.py  base.py  registry.py  sizes.py  training_state.py
src/snowtuner/recommenders/builtins/: auto_suspend_survival.py  auto_suspend_tuner.py  gen2_candidate_finder.py  multi_cluster_reducer.py  qas_candidate_finder.py  rule_based_right_sizer.py  spill_aware_right_sizer.py
src/snowtuner/seed/: __init__.py  generate.py
src/snowtuner/storage/: __init__.py  db.py  schema.py
src/snowtuner/ui/: app.py
tests/: conftest.py
tests/integration/: test_auth.py  test_business_rules.py  test_events_endpoint.py
tests/unit/: test_auto_suspend_survival.py  test_demo_runner.py  test_demo_specs.py  test_experiments_cost_estimate.py  test_experiments_derive.py  test_experiments_sampling.py  test_experiments_stats.py  test_features_idle_gaps.py  test_ingestion_warehouse_metering.py  test_schema_migrations.py
web/: .npmrc  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
web/src/: index.css  main.tsx  routeTree.gen.ts  test-setup.ts
web/src/components/: freshness-pill.test.tsx  freshness-pill.tsx  recommendation-drawer.tsx  skeleton-rows.tsx  theme-provider.tsx  top-nav.tsx
web/src/components/ui/: badge.tsx  button.tsx  card.tsx  sheet.tsx
web/src/lib/: api-types.ts  api.test.ts  api.ts  format.test.ts  format.ts  utils.ts
web/src/routes/: __root.tsx  docs.tsx  experiments.$id.tsx  experiments.index.tsx  experiments.tsx  index.tsx  queries.index.tsx  queries.tsx  recommendations.tsx  settings.tsx  warehouses.$name.tsx  warehouses.index.tsx  warehouses.tsx
