[project]
name = "snowtuner"
version = "0.1.0"
description = "Locally-hosted, open-source Snowflake cost & performance advisor"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Austin Jensen" }]
keywords = [
    "snowflake",
    "cost-optimization",
    "finops",
    "data-platform",
    "duckdb",
    "mcp",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "duckdb>=1.1.0",
    "pydantic>=2.6",
    "sqlglot>=25.0",
    "click>=8.1",
    "rich>=13.7",
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "keyring>=24.0",
    "cryptography>=41.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
snowflake = [
    "snowflake-connector-python>=3.10",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.urls]
# Update once the repo is public.
Homepage = "https://github.com/austinkjensen/snowtuner"
Repository = "https://github.com/austinkjensen/snowtuner"
Issues = "https://github.com/austinkjensen/snowtuner/issues"
Changelog = "https://github.com/austinkjensen/snowtuner/blob/main/CHANGELOG.md"

[project.scripts]
snowtuner = "snowtuner.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/snowtuner"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
# Test discovery: anything under tests/ with the standard name pattern.
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Fail fast on warnings during development — promotes warnings to errors
# so deprecation drift in deps surfaces in CI before it's a bug.
filterwarnings = [
    # Snowflake-connector & DuckDB sometimes warn on macOS-specific things
    # we can't suppress at the source.  Add specific ignores here as they
    # appear rather than blanket-suppressing.
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    # scipy.stats fires RuntimeWarning when t-test inputs have near-zero
    # variance ("Precision loss…").  Our tests deliberately exercise that
    # edge case (degenerate-data Bonferroni cap, low-N warnings) so the
    # warning is expected, not a regression signal.
    "ignore:Precision loss occurred:RuntimeWarning",
]
# Keep test runs short: short tracebacks unless --tb=long is requested.
addopts = "-ra --tb=short"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
